Completed Page One

--- a/TShuWebApp/TShuWebApp.csproj
+++ b/TShuWebApp/TShuWebApp.csproj
@@ -108,6 +108,9 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="index.cshtml" />
     <Content Include="ExercisePages\Exercise01.cshtml" />
+    <Content Include="ExercisePages\Exercise02_A.cshtml" />
+    <Content Include="ExercisePages\Exercise02_B.cshtml" />
+    <Content Include="ExercisePages\Exericise02_C.cshtml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
@@ -115,6 +118,7 @@
     <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
     <Content Include="Web.config" />
     <Content Include="_Layout.cshtml" />
+    <Content Include="WebConnectionStrings.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
