--- a/TShuWebApp/Web.config
+++ b/TShuWebApp/Web.config
@@ -5,6 +5,7 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings configSource="WebConnectionStrings.config"></connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
@@ -34,5 +35,6 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
 
 </configuration>
