--- a/TShuWebApp/TShuWebApp.csproj
+++ b/TShuWebApp/TShuWebApp.csproj
@@ -111,6 +111,7 @@
     <Content Include="ExercisePages\Exercise02_A.cshtml" />
     <Content Include="ExercisePages\Exercise02_B.cshtml" />
     <Content Include="ExercisePages\Exercise02_C.cshtml" />
+    <Content Include="ExercisePages\Exercise03.cshtml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
