--- a/TShuWebApp/TShuWebApp.csproj
+++ b/TShuWebApp/TShuWebApp.csproj
@@ -112,6 +112,8 @@
     <Content Include="ExercisePages\Exercise02_B.cshtml" />
     <Content Include="ExercisePages\Exercise02_C.cshtml" />
     <Content Include="ExercisePages\Exercise03.cshtml" />
+    <Content Include="ExercisePages\Exercise04_A.cshtml" />
+    <Content Include="ExercisePages\Exercise04_B.cshtml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
